# FMI-Unibuc

./: .gitignore  README.md  update.command
Anul I/: README.md
Anul I/Semestrul 2/POO/Proiect/: CMakeLists.txt  clear_workspace.command
Anul I/Semestrul 2/POO/Proiect/include/: brain.h  draw.h  materials.h  pieces.h  rules.h  table.h  utils.h
Anul I/Semestrul 2/POO/Proiect/resources/evaluation/: queen.txt
Anul I/Semestrul 2/POO/Proiect/src/: brain.cpp  draw.cpp  materials.cpp  rules.cpp
Anul II/: README.md
Anul II/Semestrul 1/: README.md
Anul II/Semestrul 1/SO/Proiect/: CMakeLists.txt  README.md  da  da.c  daemon_runner  makefile
Anul II/Semestrul 1/SO/Proiect/Daemon/: daemon.c  memory_manager.c  memory_manager.h
Anul II/Semestrul 1/SO/Proiect/Shared/: shared.c
Anul II/Semestrul 1/SO/Proiect/TempData/: analysis_1  analysis_3  daemon_instruction.txt  daemon_output.txt  status_1  status_3
Anul II/Semestrul 1/SO/Proiect/Worker/: analyzer.c  analyzer.h
Anul II/Semestrul 1/SO/Proiect/daemon_runner.dSYM/Contents/: Info.plist
Anul II/Semestrul 2/: README.md
Anul III/: README.md
Anul III/Semestrul 1/: README.md
Anul III/Semestrul 2/: Licenta Disertatie.webloc  README.md
Extra/: README.md
Licenta/: README.md
Semestrul 1/PA/: arie.in  rucsac.in  rucsac.py
Semestrul 2/BD/: Lab 11.sql  Lab 9.sql  lab 3.sql  lab 6.sql  lab 7.sql
Semestrul 2/Engleza/: Final exam FMI 2nd semester  2020.docx
Semestrul 2/POO/: Proiect
Semestrul 2/Sport/: Matematica si Informatica_Buhai Darius_Tenis_TH.docx
Semestrul 2/TW/: Proiect
(+2703 files in other folders)
